--- a/bower.json
+++ b/bower.json
@@ -24,12 +24,14 @@
     "components-font-awesome": "^4.7.0",
     "angular-moment": "^1.2.0",
     "angularPrint": "^0.3.8",
+    "bootswatch-dist": "spacelab",
     "ionic-native": "^2.0.3",
-    "ngCordova": "^0.1.27-alpha"
+    "ngCordova": "^0.1.27-alpha",
     "angular-touch": "1.6.8"
   },
   "devDependencies": {
-    "angular-mocks": "~1.5.11"
+    "ionic": "driftyco/ionic-bower#1.3.3",
+    "babel-polyfill": "^0.0.1"
   },
   "resolutions": {
     "angular": "1.6.8"
